# glicol

.github/workflows/: mayhem.yml
js/src/: glicol.js  glicol_wasm.wasm  scope-worker.js  utils.js
mayhem/: Dockerfile  parse_ast.mayhemfile
rs/macros/src/: lib.rs
rs/main/examples/: hello.rs
rs/main/src/: util.rs
rs/parser/examples/: hello.rs  test.rs
rs/parser/fuzz/: Cargo.toml
rs/parser/fuzz/fuzz_targets/: parse_ast.rs
rs/parser/src/: glicol.pest  lib.rs
rs/parser/tests/: no_nodename.rs
rs/parser2/: Cargo.toml
rs/parser2/src/: glicol.pest  lib.rs
rs/synth/examples/: hi.rs
rs/synth/src/node/delay/: delayms2.rs
